# ShitLang

./: .gitignore  CMakeLists.txt  README.md  hello_shit.shit  new_shit.shit
src/: lbaselib.c  llex.c  ltable.c  ltm.c  lualib.h
